--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release
 on:
     push:
         tags: ['*']
+env:
+  GOPRIVATE: github.com/mayye4ka
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -11,6 +13,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23.1'
+      - name: Configure git for private modules
+        env:
+          TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: git config --global url."https://user:${TOKEN}@github.com".insteadOf "https://github.com"  
       - name: Install dependencies
         run: go mod download
       - name: Build
