--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Configure git for private modules
         env:
           TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: git config --global url."https://user:${TOKEN}@github.com".insteadOf "https://github.com"
+        run: git config --global url."https://mayye4ka:${TOKEN}@github.com".insteadOf "https://github.com"
       - name: Install dependencies
         run: go mod download
       - name: Build
