--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: '1.23.1'
       - name: Configure git for private modules
         env:
-          TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: git config --global url."https://mayye4ka:${TOKEN}@github.com".insteadOf "https://github.com"  
       - name: Install dependencies
         run: go mod download
