--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -15,8 +15,9 @@ jobs:
           go-version: '1.23.1'
       - name: Configure git for private modules
         env:
-          TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: git config --global url."https://mayye4ka:${TOKEN}@github.com".insteadOf "https://github.com"
+          USER: ${{ github.actor }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: git config --global url."https://${USER}:${TOKEN}@github.com".insteadOf "https://github.com"
       - name: Install dependencies
         run: go mod download
       - name: Build
