--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Configure git for private modules
         run: git config --global url."https://${USER}:${TOKEN}@github.com".insteadOf "https://github.com"
       - name: ECHO
-        run: echo ${#USER}:${#TOKEN}
+        run: go get github.com/mayye4ka/pinder-api@v1.2.0
       - name: Install dependencies
         run: go mod download
       - name: Build
