--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           go-version: '1.23.1'
       - name: Configure git for private modules
-        run: git config --global url."https://${USER}:${TOKEN}@github.com".insteadOf "https://github.com"
+        run: git config --global url."https://${USER}:${TOKEN}@github.com/mayye4ka".insteadOf "https://github.com/mayye4ka"
       - name: ECHO
         run: go get github.com/mayye4ka/pinder-api@v1.2.0
       - name: Install dependencies
