--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
 env:
   GOPRIVATE: github.com/mayye4ka
   USER: ${{ github.actor }}
-  TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  TOKEN: ${{ github.token }}
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
