--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           go-version: '1.23.1'
       - name: Configure git for https
-        run: git config --global url."https://${USER}:${TOKEN}@github.com".insteadOf "https://github.com"
+        run: git config --global url."https://${USER}:${TOKEN}@github.com/".insteadOf "https://github.com/"
       - name: clone
         run: git clone https://github.com/mayye4ka/pinder-api
       - name: Install dependencies
