--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -15,8 +15,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23.1'
-      - name: Configure git for https
-        run: git config --global url.https://$USER:$TOKEN@github.com/.insteadOf https://github.com/
+      - name: Configure git for private repos
+        run: git config --global url."https://${USER}:${TOKEN}@github.com/".insteadOf "https://github.com/"
+      - name: List
+        run: git config --global --list
       - name: Install dependencies
         run: go mod download
       - name: Build
