--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -15,9 +15,15 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23.1'
+      - name: echo1
+        run: echo "${USER}"
+      - name: echo2
+        run: echo "${#TOKEN}"
+      - name: echo3
+        run: go env GOPRIVATE
       - name: Configure git for private repos
         run: git config --global url."https://${USER}:${TOKEN}@github.com/".insteadOf "https://github.com/"
-      - name: List
+      - name: List config
         run: git config --global --list
       - name: Install dependencies
         run: go mod download
