--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -5,8 +5,7 @@ on:
 env:
   GOPRIVATE: github.com/mayye4ka
   USER: ${{ github.actor }}
-  TOKEN: ${{ github.token }}
-  TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
+  TOKEN: ${{ secrets.TOKEN_SECRET }}
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -16,16 +15,8 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23.1'
-      - name: echo1
-        run: echo "${USER}"
-      - name: echo2
-        run: echo "${#TOKEN}"
-      - name: echo3
-        run: go env GOPRIVATE
       - name: Configure git for private repos
         run: git config --global url."https://${USER}:${TOKEN_SECRET}@github.com/".insteadOf "https://github.com/"
-      - name: List config
-        run: git config --global --list
       - name: Install dependencies
         run: go mod download
       - name: Build
