--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,6 @@ jobs:
             username: ${{github.actor}}
             password: ${{secrets.TOKEN_SECRET}}
       - name: Build image
-        run: docker build --tag ghcr.io/mayye4ka/pinder:${{ github.ref_name }} --build-arg USER=${USER},TOKEN=${TOKEN} .
+        run: docker build --tag ghcr.io/mayye4ka/pinder:${{ github.ref_name }} --build-arg USER=${{ github.actor }} --build-arg TOKEN=${{ secrets.TOKEN_SECRET }} .
       - name: Push image
         run: docker push ghcr.io/mayye4ka/pinder:${{ github.ref_name }}
