--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ MINIO_AK=test
 MINIO_SK=test
 DB_DSN=user:pw@tcp(db.local:3306)/dbname?charset=utf8mb4&parseTime=True&loc=Local
 RABBIT_MQ_DSN=amqp://user:pw@rabbit.local:5672
+GRPC_PORT=8080
+WS_PORT=8081
