--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           go-version: '1.23.1'
       - name: Configure git for private repos
-        run: git config --global url."https://${USER}:${TOKEN_SECRET}@github.com/".insteadOf "https://github.com/"
+        run: git config --global url."https://${USER}:${TOKEN}@github.com/".insteadOf "https://github.com/"
       - name: Install dependencies
         run: go mod download
       - name: Build
